# MKUEMRLP

./: AllgemeineDokumentation.md
LinkDownloadScript/: requirements.txt
datenmodelle/digitizeThePlanet/: extrahiertesOriginalmodellDigitizeThePlanet.dbml
datenmodelle/nsgVersionen/: NSGv1.1.dbml  NSGv1.3.dbml  NSGv1.dbml
scripts/jsonXmlFormatter/: NSGv1.3.json  NSGv1.3.xml
scripts/linkDownloadScript/: .gitignore  README.md  TableExport.xlsx  download_pdfs.py
scripts/pdfExtractor/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  setup.sh
scripts/pdfExtractor/.claude/: settings.local.json
scripts/pdfExtractor/nsgx/: __init__.py  __main__.py  cli.py  enumdiff.py  merge.py  models.py  pack.py  propose.py  run.py  utils.py
scripts/pdfExtractor/prompts/: enumdiff_system.txt  extractor_system.txt  known_enums.json
scripts/pdfMiner/: README.md  model_gap_scan.py  requirements.txt
scripts/xmlFiller/: README.md  TASKS.md  convert.py  pdf_extractor.py  requirements.txt  rule_extractor.py  schema_loader.py  serializer.py  synonyms.json  text_processor.py  utils.py
scripts/xmlFiller/output/: NSG-7100-001.json  NSG-7100-001.xml
